--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-# Project exclude paths
-/node_modules/
+/node_modules
+/build
+
+dev.js
+
+
+
+.DS_Store
+
+npm-debug.log*
+yarn-debug.kog*
+yarn-error.log*
+
+.vscode
