--- a/package.json
+++ b/package.json
@@ -1,33 +1,22 @@
 {
-  "name": "node_chat",
+  "name": "nodejs_chat",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/Leesungsup/node_chat.git"
-  },
-  "author": "Seungsup",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Leesungsup/node_chat/issues"
-  },
-  "homepage": "https://github.com/Leesungsup/node_chat#readme",
   "dependencies": {
-    "axios": "^0.27.2",
-    "body-parser": "^1.20.0",
-    "child_process": "^1.0.2",
-    "connect": "^3.7.0",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.1",
-    "fs": "0.0.1-security",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "socket.io": "^4.1.3",
-    "ws": "^8.8.1"
+    "cheerio": "^1.0.0-rc.10",
+    "express": "^4.17.2",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
+    "ngrok": "^4.3.0",
+    "nodemon": "^2.0.15",
+    "request": "^2.88.2",
+    "socket.io": "^4.4.1"
   }
 }
