--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-/node_modules
-/build
-
-dev.js
-
-
-
+node_modules
+public/bundle.js
+public/bundle.js.map
+secrets.js
 .DS_Store
-
-npm-debug.log*
-yarn-debug.kog*
-yarn-error.log*
-
-.vscode
+npm-debug.log
+yarn-error.log
+.env
