--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "shbreakout",
-  "version": "0.0.0",
-  "private": true,
+  "name": "nodejsvoip",
+  "version": "1.0.0",
+  "description": "voip without webrtc",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cracker0dks/nodeJsVoip.git"
+  },
+  "keywords": [
+    "voip"
+  ],
+  "author": "cracker0dks",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cracker0dks/nodeJsVoip/issues"
+  },
+  "homepage": "https://github.com/cracker0dks/nodeJsVoip#readme",
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "jquery": "^3.3.1",
-    "mobile-detect": "^1.4.3",
-    "morgan": "~1.9.0",
-    "phaser": "^3.15.1",
-    "socket.io": "^2.2.0"
-  }
+    "express": "4.x",
+    "socket.io": "4.x"
+  },
+  "preferGlobal": true,
+  "private": true
 }
