--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
-  "name": "nodejsvoip",
+  "name": "startplayup",
   "version": "1.0.0",
-  "description": "voip without webrtc",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test":"jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cracker0dks/nodeJsVoip.git"
-  },
-  "keywords": [
-    "voip"
-  ],
-  "author": "cracker0dks",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/cracker0dks/nodeJsVoip/issues"
-  },
-  "homepage": "https://github.com/cracker0dks/nodeJsVoip#readme",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "4.x",
-    "socket.io": "4.x"
-  },
-  "preferGlobal": true,
-  "private": true
+    "body-parser": "^1.19.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "getusermedia": "^2.0.1",
+    "http": "^0.0.1-security",
+    "pug": "^3.0.2",
+    "simple-peer": "^9.10.0",
+    "socket.io": "4.0.1",
+    "socketio": "^1.0.0",
+    "wrtc": "^0.4.7",
+    "ws": "^7.4.4"
+  }
 }
