--- a/package.json
+++ b/package.json
@@ -1,25 +1,47 @@
 {
-  "name": "startplayup",
+  "name": "_discord",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "This app is just to write the contents of a given channel to file, for use in OBS",
+  "main": "discord.js",
+  "type": "module",
   "scripts": {
-    "test":"jest"
+    "start": "nodemon -e js  || touch discord.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lfwells/discord-lecture-reader.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lfwells/discord-lecture-reader/issues"
+  },
+  "homepage": "https://github.com/lfwells/discord-lecture-reader#readme",
+  "devDependencies": {
+    "eslint": "^8.6.0",
+    "nodemon": "^2.0.7"
+  },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "connect": "^3.7.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "discord-oauth2": "^2.7.1",
+    "discord.js": "^13.5.1",
     "ejs": "^3.1.6",
+    "emoji": "npm:emoji.json@^13.1.0",
+    "emoji.json": "^13.1.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "getusermedia": "^2.0.1",
-    "http": "^0.0.1-security",
-    "pug": "^3.0.2",
-    "simple-peer": "^9.10.0",
-    "socket.io": "4.0.1",
-    "socketio": "^1.0.0",
-    "wrtc": "^0.4.7",
-    "ws": "^7.4.4"
+    "express-basic-auth": "^1.2.0",
+    "express-session": "^1.17.2",
+    "firebase-admin": "^9.5.0",
+    "googleapis": "^39.2.0",
+    "json2csv": "^5.0.6",
+    "moment": "^2.29.1",
+    "mongodb": "^4.1.4",
+    "pptx-parser": "^1.1.7-beta.9",
+    "serve-static": "^1.14.1",
+    "session-file-store": "^1.5.0"
   }
 }
