--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
-token.txt
-*firebase-adminsdk*
 node_modules
-users.js
-awards/namesBackup kit109.json
-awards/namesBackup kit305.json
-.vscode/sftp.json
-.vscode/sftp.json
-~*.docx
-~*.tmp
-.DS_Store
-.vscode/sftp.json
-*_oauth*.js
+httpssettings.txt
+config
+.env
+Procfile
