--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "engines": {
-    "node": "14.15.0"
-  },
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "socket",
+  "version": "0.0.0",
+  "private": true,
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.6.0",
-    "express": "^4.17.1",
-    "node-schedule": "^1.3.3",
-    "peer": "^0.6.1",
-    "randomstring": "^1.2.1",
-    "socket.io": "^2.4.1",
-    "twilio": "^3.67.0"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "^2.6.1",
+    "express": "~4.16.1",
+    "express-ejs-layouts": "^2.5.0",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "pug": "^2.0.3",
+    "socket.io": "^2.2.0"
   }
 }
