--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "server",
+  "name": "voice_chat",
   "version": "1.0.0",
-  "engines": {
-    "node": "14.15.0"
-  },
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client-install": "npm install --prefix client",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "",
-  "license": "ISC",
+  "keywords": [],
+  "author": "GuiFSs",
+  "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.6.0",
-    "express": "^4.17.1",
-    "node-schedule": "^1.3.3",
-    "peer": "^0.6.1",
-    "randomstring": "^1.2.1",
-    "socket.io": "^2.4.1",
-    "twilio": "^3.67.0"
+    "arraybuffer-to-audiobuffer": "0.0.5",
+    "body-parser": "1.18.3",
+    "concurrently": "4.1.0",
+    "express": "4.16.4",
+    "mongoose": "5.5.2",
+    "peer": "0.2.10",
+    "socket.io": "2.2.0",
+    "socket.io-p2p-server": "1.2.0",
+    "socket.io-stream": "0.9.1"
   }
 }
