--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "2chat",
+  "name": "voice-chat-server",
   "version": "1.0.0",
-  "description": "What is 2Chat? 2Chat is a text & voice replit chat application with a built electron app. You can chat with other replit users, or create a room with the 'Join Room' or 'Join Voice' button. Voice chat is currently only allowed with whitelisted users, as we cannot moderate Voice Chat.",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc -p ."
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@socket.io/admin-ui": "^0.4.0",
-    "@types/node": "^18.0.6",
-    "axios": "^0.27.2",
-    "bad-words": "^3.0.4",
-    "bcrypt": "^5.0.1",
-    "better-sqlite3": "^7.6.2",
-    "discord-rpc": "^4.0.1",
-    "dompurify": "^2.4.0",
-    "ejs": "^3.1.8",
-    "electron": "^20.0.2",
-    "express": "^4.18.1",
-    "jsdom": "^20.0.0",
-    "marked": "^4.0.18",
-    "node-fetch": "^2.6.7",
-    "quick.db": "^9.0.6",
-    "socket.io": "^4.5.1"
+    "cookie-parser": "^1.4.5",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "socket.io": "^4.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   }
 }
