--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "voice-chat-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "dmdassc_chat_server",
+  "version": "0.0.1",
+  "description": "DMDASSC Chat Server",
+  "main": "server.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc -p ."
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
-    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "socket.io": "^4.4.0"
+    "socket.io": "^2.3.0"
   },
-  "devDependencies": {
-    "@types/node": "^14.14.31",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
-  }
+  "engines": {
+    "node": "12.x"
+  },
+  "license": "MIT"
 }
