--- a/package.json
+++ b/package.json
@@ -1,34 +1,15 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
-  "engines": {
-    "node": "14.x"
-  },
-  "main": "index.js",
+  "name": "client",
+  "version": "1.0.0",
+  "description": "",
+  "main": "client.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tristan Vegas",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "eiows": "^3.6.1",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "socket.io": "^4.1.3"
-  },
-  "devDependencies": {
-    "got": "^11.3.0",
-    "tape": "^4.7.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "license": "MIT"
+    "fs": "0.0.1-security",
+    "socket.io-client": "^3.1.1"
+  }
 }
