--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "irc-client",
+  "name": "nodejs-socketio-server",
   "version": "1.0.0",
-  "description": "IRC Client web application",
-  "main": "irc-client.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/quentinxs/irc-client.git"
+    "url": "git+https://github.com/iagxferreira/nodejs-socketio-server.git"
   },
-  "author": "Quentin Sheets",
-  "license": "MIT",
+  "keywords": [],
+  "author": "Iago Ferreira",
+  "license": "",
   "bugs": {
-    "url": "https://github.com/quentinxs/irc-client/issues"
+    "url": "https://github.com/iagxferreira/nodejs-socketio-server/issues"
   },
-  "homepage": "https://github.com/quentinxs/irc-client#readme",
+  "homepage": "https://github.com/iagxferreira/nodejs-socketio-server#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "irc": "^0.5.2",
+    "https": "^1.0.0",
     "socket.io": "^3.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
