--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
-  "name": "voice-chat-server",
-  "version": "1.0.0",
-  "description": "",
+  "name": "socket.io-chat",
+  "version": "0.0.0",
+  "description": "A simple chat client using socket.io",
   "main": "index.js",
-  "scripts": {
-    "start": "ts-node index.js",
-    "dev": "nodemon indexjs",
-    "build": "tsc -p ."
-  },
-  "author": "",
-  "license": "ISC",
+  "author": "Grant Timmerman",
+  "private": true,
+  "license": "BSD",
   "dependencies": {
-    "cookie-parser": "^1.4.5",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "socket.io": "^4.4.0"
+    "express": "~4.17.1",
+    "socket.io": "^4.0.0"
   },
-  "devDependencies": {
-    "@types/node": "^14.14.31",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+  "scripts": {
+    "start": "node index.js"
   }
 }
