--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "webcage",
-  "version": "1.0.0",
-  "description": "",
+  "name": "socket.io-chat",
+  "version": "0.0.0",
+  "description": "A simple chat client using socket.io",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Grant Timmerman",
+  "private": true,
+  "license": "BSD",
   "dependencies": {
-    "express": "^4.17.1",
-    "moment": "^2.29.1",
-    "socket.io": "^3.1.2"
+    "express": "~4.17.1",
+    "socket.io": "^4.0.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+  "scripts": {
+    "start": "node index.js"
   }
 }
